--- a/Source Web Design/css/color/color-1.css
+++ b/Source Web Design/css/color/color-1.css
@@ -158,7 +158,7 @@
   color: #ff9900;
 }
 .pro-details .pro-ratting span {
-  color: #ff9900;
+  color: #CB2326;
 }
 .pro-details .pro-title:hover {
   color: #ff9900;
@@ -170,7 +170,7 @@
   color: #ff9900;
 }
 .list-pro-details .pro-ratting span {
-  color: #ff9900;
+  color: #CB2326;
 }
 .list-pro-details .pro-price .new {
   color: #ff9900;
