Update page Add

--- a/Source Web Design/style.css
+++ b/Source Web Design/style.css
@@ -5798,6 +5798,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
     float: right;
 }
 .procced-checkout .checkout-link {
+    margin-bottom: 20px;
     background-color: #ff9900;
     border: 1px solid #ff9900;
     border-radius: 3px;
