--- a/views/quanlyhoadon.ejs
+++ b/views/quanlyhoadon.ejs
@@ -47,77 +47,7 @@
 <div class="wrapper bg-white fix">
     
     <!-- Header 4 -->
-    <div class="header-area header-area-4  clearfix">
-        <!-- Header Top 4 -->
-        <div class="header-top header-top-4">
-            <div class="container">
-                <div class="row">
-                    <!-- Header Top Center 4 -->
-                    <div class="header-top-left header-top-left-8 col-xs-8 text-left">
-                        <a href="index.html" class="logo-2">
-                            <img src="img/logo.png" alt="logo" />
-                        </a>
-                    </div>
-                    <!-- Header Top Right 4 -->
-                    <div class="header-top-right header-top-right-4 col-xs-4 text-right">
-                        <!-- Header Top Link -->
-                        <div class="header-top-link float-right hidden-sm hidden-xs">
-                            <a href="#">Đăng xuất</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Header Bottom 4 -->
-        <div class="header-bottom sticky header-bottom sticky-4">
-            <div class="container">
-                <div class="row">
-                    <!-- Menu Wrapper 4 -->
-                    <div class="menu-wrapper menu-wrapper-4 text-center col-xs-12 hidden-sm hidden-xs">
-                        <div class="menu menu-4">
-                            <nav>
-                                <ul>
-                                    <li>
-                                        <a href="quanlysanpham.html">Quản lý sản phẩm đấu giá</a>
-                                    </li>
-                                    <li class="active">
-                                        <a href="quanlyhoadon.html">Quản lý hoá đơn</a>
-                                    </li>
-                                    <li>
-                                        <a href="quanlykhachhang.html">Quản lý khách hàng</a>
-                                    </li>
-                                    <li>
-                                        <a href="quanlyloaisanpham.html">Quản lý loại sản phẩm</a>
-                                    </li>
-                                </ul>
-                            </nav>
-                        </div>
-                    </div>
-                    <!-- Mobile Menu Wrapper 2 -->
-                    <div class="mobile-menu-wrapper mobile-menu-wrapper-2 hidden-md hidden-lg col-xs-12">
-                        <div class="mobile-menu mobile-menu-2">
-                            <nav>
-                                <ul>
-                                    <li>
-                                        <a href="quanlysanpham.html">Quản lý sản phẩm đấu giá</a>
-                                    </li>
-                                    <li class="active">
-                                        <a href="quanlyhoadon.html">Quản lý hoá đơn</a>
-                                    </li>
-                                    <li>
-                                        <a href="quanlykhachhang.html">Quản lý khách hàng</a>
-                                    </li>
-                                    <li>
-                                        <a href="quanlyloaisanpham.html">Quản lý loại sản phẩm</a>
-                                    </li>
-                                </ul>
-                            </nav>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <% include element/header %>
     <!-- Cart Area -->
     <div class="cart-area pb-90 pt-90 mt-100">
         <div class="container">
@@ -192,60 +122,7 @@
         </div>
     </div>
     <!--Footer-->
-    <div class="footer-top-area pb-70 pt-150">
-        <div class="container">
-            <div class="row">
-                <div class="footer-contact col-md-8 col-sm-6 col-xs-12">
-                    <img src="img/logo-2.png" alt="" />
-                    <div>
-                        <span>Địa chỉ :</span>
-                        <p>12 Nguyễn Văn Bảo, phường 04, quận Gò Vấp, HCM</p>
-                    </div>
-                    <div>
-                        <span>Hotline :</span>
-                        <p>+84 000 0000</p>
-                    </div>
-                    <div>
-                        <span>Email :</span>
-                        <a href="#">contact-company@stock.com</a>
-                    </div>
-                    <div class="footer-social fix">
-                        <a href="#"><i class="zmdi zmdi-facebook"></i></a>
-                        <a href="#"><i class="zmdi zmdi-instagram"></i></a>
-                    </div>
-                </div>
-                <div class="footer-shipping col-md-2 col-sm-3 col-xs-6">
-                    <h4>CÁC LOẠI</h4>
-                    <ul>
-                        <li>
-                            <a href="#">Xe cộ</a>
-                        </li>
-                        <li>
-                            <a href="#">Đồ nội thất</a>
-                        </li>
-                        <li>
-                            <a href="#">Đồ điện tử</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="footer-shipping col-md-2 col-sm-3 col-xs-6">
-                    <h4>
-                    </h4>
-                    <ul>
-                        <li>
-                            <a href="#">Thời trang</a>
-                        </li>
-                        <li>
-                            <a href="#">Giày</a>
-                        </li>
-                        <li>
-                            <a href="#">Đồ cổ</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
+    <% include element/footer %>
 </div>
 <!-- Body main wrapper end -->
 
