Thêm xoá doanh nghiệp
Chưa kiểm tra hợp lệ dữ liệu

--- a/views/element/header.ejs
+++ b/views/element/header.ejs
@@ -29,13 +29,16 @@
                         <nav>
                             <ul>
                                 <li>
-                                    <a href="/quanlysanpham">Quản lý sản phẩm đấu giá</a>
+                                    <a href="/quanlysanpham">Quản lý sản phẩm</a>
                                 </li>
                                 <li>
                                     <a href="/quanlyhoadon">Quản lý hoá đơn</a>
                                 </li>
                                 <li>
                                     <a href="/quanlykhachhang">Quản lý khách hàng</a>
+                                </li>
+                                <li>
+                                    <a href="/quanlydoanhnghiep">Quản lý doanh nhgiệp</a>
                                 </li>
                                 <li>
                                     <a href="/quanlyloaisanpham">Quản lý loại sản phẩm</a>
@@ -57,6 +60,9 @@
                                 </li>
                                 <li>
                                     <a href="/quanlykhachhang">Quản lý khách hàng</a>
+                                </li>
+                                <li>
+                                    <a href="/quanlydoanhnghiep">Quản lý doanh nhgiệp</a>
                                 </li>
                                 <li>
                                     <a href="/quanlyloaisanpham">Quản lý loại sản phẩm</a>
