--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i"
+    <link href="css/googleapisFont.css"
         rel="stylesheet">
 
     <!-- CSS -->
@@ -654,7 +654,7 @@
     <!-- Main JS -->
     <script src="js/main.js"></script>
     <!-- partial -->
-    <script src='https://code.jquery.com/jquery-3.3.1.slim.min.js'></script>
+    <script src='js/jquery-3.3.1.slim.min.js'></script>
     <script src="js/countdown.js"></script>
 </body>
 
