--- a/views/quanlysanpham_business.ejs
+++ b/views/quanlysanpham_business.ejs
@@ -16,7 +16,7 @@
 
     <!-- CSS -->
     <!-- Bootstrap CSS -->
-    <link rel='stylesheet' href='css/bootstrap.min.css'>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel='stylesheet' href='css/bootstrap-datetimepicker.css'>
     <!-- Icon Font CSS-->
     <link rel="stylesheet" href="css/material-design-iconic-font.min.css">
@@ -50,80 +50,21 @@
     </div>
     <!-- Body main wrapper start -->
     <div class="wrapper bg-white fix">
-
+        <h1>Sản phẩm của doanh nghiệp</h1>
         <!-- Header 4 -->
         <% include element/header %>
         <!-- Cart Area -->
         <div class="cart-area pb-90 pt-90 mt-100">
             <div class="container">
-                <div class="row">
-                    <div class="procced-checkout col-md-12 col-xs-12">
-                        <button class="btn btn-open checkout-link">
-                            <span>Thêm sản phẩm đấu giá</span></button>
-                    </div>
-                    <section class="modal">
-                        <div class="wrapper">
-                            <div class="container">
-                                <span class="icon-close"></span>
-                                <div class="right">
-                                    <div class="form">
-                                        <h2 class="title">Thêm sản phẩm đấu giá</h2>
-                                        <form method="get" action="/createproduct">
-                                            <div class="input-wrapper">
-                                                <label for="">Nhập tên sản phẩm:</label>
-                                                <input id="name" type="text" name="name" placeholder="Name">
-                                            </div>
-                                            <div class="input-wrapper">
-                                                <label for="">Chọn loại sản phẩm:</label>
-                                                <select name="cards">
-                                                    <option value="">Điện tử</option>
-                                                    <option value="">Đồ cổ</option>
-                                                    <option value="">Xe</option>
-                                                </select>
-                                            </div>
-                                            <div class="input-wrapper">
-                                                <label for="">Nhập mô tả:</label>
-                                                <input id="mota" type="text" name="des" placeholder="Mô tả">
-                                            </div>
-                                            <div class="input-wrapper">
-                                                <label for="">Chọn hình ảnh:</label>
-                                                <input id="image" type="file" placeholder="Image">
-                                            </div>
-                                            <div class="input-wrapper">
-                                                <label for="">Nhập giá:</label>
-                                                <input id="gia" type="text" name="price" placeholder="Giá">
-                                            </div>
-                                            <div class="input-wrapper">
-                                                <label for="">Thời gian khởi động đấu giá:</label>
-                                                <div class="form-group">
-                                                    <div class="input-group date" id="datetimepicker1">
-                                                        <input type="text" class="form-control" name="dateAuc" />
-                                                        <span class="input-group-addon">
-                                                            <span class="">Chọn ngày</span>
-                                                        </span>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="input-wrapper">
-                                                <label for="">Hạn cho mỗi lượt:</label>
-                                                <input id="due" type="text" name="timerun" placeholder="Giây">
-                                            </div>
-                                            <button class="btn" type="submit"><span>Xác nhận</span></button>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </section>
-                </div>
                 <div class="row" style="margin-top: 20px;">
                     <div class="col-xs-12">
                         <div class="cart-table table-responsive mb-50">
+                            <h3 style="font-weight: 600; padding-bottom: 20px;">Tất cả sản phẩm của <%= _name %></h3>
                             <table class="table text-center">
                                 <thead>
                                     <tr>
                                         <th class="product">Sản phẩm</th>
-                                        <th class="price">Giá</th>
+                                        <th class="price">Giá KĐ</th>
                                         <th class="stock">TG bắt đầu</th>
                                         <th class="qty">Hạn</th>
                                         <th class="remove">Chỉnh sửa</th>
@@ -144,7 +85,6 @@
                                                 <div class="details fix">
                                                     <a href="#"> <%=product.productName%></a>
                                                     <p><%=product.productid%></p>
-                                                    <p>Business : <%=item.businessName%></p>
                                                     <p>Loại : Đồ cổ</p>
                                                 </div>
                                             </div>
@@ -185,18 +125,23 @@
 
     <!-- JS -->
 
-    <!-- jQuery JS  -->
+    <!-- jQuery JS
+============================================ -->
     <!-- partial -->
-    <script src='jquery.min.js'></script>
-    <script src='moment-with-locales.js'></script>
+    <script src='js/jquery.min.js'></script>
+    <script src='js/moment-with-locales.js'></script>
     <script src='js/bootstrap-datetimepicker.js'></script>
-    <!-- Bootstrap JS  -->
+    <!-- Bootstrap JS
+============================================ -->
     <script src="js/bootstrap.min.js"></script>
-    <!-- Plugins JS  -->
+    <!-- Plugins JS
+============================================ -->
     <script src="js/plugins.js"></script>
-    <!-- Particles Active JS  -->
+    <!-- Particles Active JS
+============================================ -->
     <script src="js/app.js"></script>
-    <!-- Main JS  -->
+    <!-- Main JS
+============================================ -->
     <script src="js/main.js"></script>
     <script src="js/addNews.js"></script>
     <script src="js/swiper.js"></script>
