Thay đổi chút xíu

--- a/views/quanlyloaisanpham.ejs
+++ b/views/quanlyloaisanpham.ejs
@@ -15,17 +15,17 @@
 
 <!-- CSS -->
 <!-- Bootstrap CSS -->
-<link rel="stylesheet" href="css/bootstrap.min.css">
+<link rel="stylesheet" href="./css/bootstrap.min.css">
 <!-- Icon Font CSS-->
-<link rel="stylesheet" href="css/material-design-iconic-font.min.css">
+<link rel="stylesheet" href="./css/material-design-iconic-font.min.css">
 <!-- Plugins Import CSS -->
-<link rel="stylesheet" href="css/import.css">
+<link rel="stylesheet" href="./css/import.css">
 <!-- Style CSS -->
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="./style.css">
 <!-- Responsive CSS -->
-<link rel="stylesheet" href="css/responsive.css">
+<link rel="stylesheet" href="./css/responsive.css">
 <link href="css/color/color-1.css" rel="stylesheet">
-<link rel="stylesheet" href="css/addNews.css">
+<link rel="stylesheet" href="./css/addNews.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
 
@@ -144,7 +144,7 @@
 
 <!-- jQuery JS
 ============================================ -->
-<script src="js/vendor/jquery-1.12.0.min.js"></script>
+<script src="js/vendor/jquery.min.js"></script>
 <!-- Bootstrap JS
 ============================================ -->
 <script src="js/bootstrap.min.js"></script>
