--- a/views/quanlydoanhnghiep.ejs
+++ b/views/quanlydoanhnghiep.ejs
@@ -31,6 +31,9 @@
     <link rel='stylesheet' href='css/swiper.min.css'>
     <!-- Modernizer JS -->
     <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+
+    <!-- Delete CSS -->
+    <link rel="stylesheet" href="css/styleDel.css">
 </head>
 
 <body>
@@ -67,36 +70,43 @@
                                 <div class="right">
                                     <div class="form">
                                         <h2 class="title">Thêm doanh nghiệp</h2>
-                                        <form action="createbusiness" method="get">
+                                        <form action="createbusiness" method="get" id="autopass" onsubmit="return checkBusiness(this);" >
                                             <div class="input-wrapper">
                                                 <label for="">Tên doanh nghiệp</label>
-                                                <input name="businessName" type="text" placeholder="Name">
+                                                <input name="businessName" id="businessName" type="text" placeholder="Name" onblur="checkBusinessName(this.value)">
                                             </div>
+                                            <label id="error_businessName" style="text-transform: inherit;font-style: italic;color: red;font-size: 13px;"></label>
                                             <div class="input-wrapper">
                                                 <label for="">Tên người dùng:</label>
-                                                <input name="username" type="text" placeholder="User">
+                                                <input name="username" id="username" type="text" placeholder="User" onblur="checkUsername(this.value)">
                                             </div>
+                                            <label id="error_username" style="text-transform: inherit;font-style: italic;color: red;font-size: 13px;"></label>
                                             <div class="input-wrapper">
                                                 <label for="">Mật khẩu:</label>
-                                                <input name="password" type="text" placeholder="Password">
+                                                <input name="password" type="text" placeholder="Password" id="passwordA" onblur="checkPassword(this.value)">
                                             </div>
+                                            <label id="error_password" style="text-transform: inherit;font-style: italic;color: red;font-size: 13px;"></label>
                                             <div class="input-wrapper">
                                                 <label for="">Nhập lại mật khẩu:</label>
-                                                <input name="re-password" type="text" placeholder="Re-Password">
+                                                <input name="re-password" id="re-password" type="text" placeholder="Re-Password" onblur="checkConfirmPassword(this.value)">
                                             </div>
+                                            <label id="error_repassword" style="text-transform: inherit;font-style: italic;color: red;font-size: 13px;"></label>
                                             <div class="input-wrapper">
                                                 <label for="">Địa chỉ:</label>
-                                                <input name="adress" type="text" placeholder="Address">
+                                                <input name="adress" id="adress" type="text" placeholder="Address" onblur="checkAdress(this.value)">
                                             </div>
+                                            <label id="error_adress" style="text-transform: inherit;font-style: italic;color: red;font-size: 13px;"></label>
                                             <div class="input-wrapper">
                                                 <label for="">Số điện thoại:</label>
-                                                <input name="phone" type="text" placeholder="Telephone Number">
+                                                <input name="phone" id="phoneA" type="text" placeholder="Telephone Number" onblur="checkPhone(this.value)">
                                             </div>
+                                            <label id="error_phone" style="text-transform: inherit;font-style: italic;color: red;font-size: 13px;"></label>
                                             <div class="input-wrapper">
                                                 <label for="">Email:</label>
-                                                <input name="email" type="email" placeholder="Name">
+                                                <input name="email" id="email" type="email" placeholder="Name" id="email" onblur="checkEmail(this.value)">
                                             </div>
-                                            <button type="submit" class="btn"><span>Xác nhận</span></button>
+                                            <label id="error_email" style="text-transform: inherit;font-style: italic;color: red;font-size: 13px;"></label>
+                                            <button class="btn btn-success" type="submit"><span>Xác nhận</span></button>
                                         </form>
                                     </div>
                                 </div>
@@ -130,19 +140,33 @@
                                         <td scope="row" style="font-weight: 700; padding-left: 10px;"><%= i %></td>
                                         <td><%= item.businessID %></td>
                                         <td style="font-weight: 700;"><%= item.businessName %></td>
-                                        <td><%= item.contact.adress %></td>
-                                        <td><%= item.contact.phone %></td>
-                                        <td><%= item.contact.email %></td>
-                                        <td><%= item.account.username %></td>
+                                        <td><%= item.adress %></td>
+                                        <td><%= item.phone %></td>
+                                        <td><%= item.email %></td>
+                                        <td><%= item.username %></td>
                                         <td><a
                                                 href="/quanlydoanhnghiep_sanpham?businessID=<%= item.businessID %>&businessName=<%= item.businessName %>"><button
                                                     class="cart-pro-remove"><i class="zmdi zmdi-eye"></i></button></a>
                                         </td>
                                         <td><a href=""><button class="cart-pro-remove"><i
                                                         class="zmdi zmdi-edit"></i></button></a></td>
-                                        <td><a
-                                                href="/deletebusiness?businessid=<%= item.businessID %>&businessname=<%= item.businessName %>"><button
-                                                    class="cart-pro-remove"><i class="zmdi zmdi-close"></i></button></a>
+                                        <td>
+                                            <!-- partial:index.partial.html -->
+                                            <a><button class="cd-popup-trigger cart-pro-remove"><i
+                                                        class="zmdi zmdi-close"></i></button></a>
+                                            <div class="cd-popup" role="alert">
+                                                <div class="cd-popup-container">
+                                                    <p>Are you sure you want to delete this element?</p>
+                                                    <ul class="cd-buttons">
+                                                        <li><a
+                                                                href="/deletebusiness?businessid=<%= item.businessID %>&businessname=<%= item.businessName %>">Yes</a>
+                                                        </li>
+                                                        <li><a class="btn cd-popup-close1"
+                                                                style="padding-top: 0px;">No</a></li>
+                                                    </ul>
+                                                    <a class="cd-popup-close img-replace"></a>
+                                                </div> <!-- cd-popup-container -->
+                                            </div> <!-- cd-popup -->
                                         </td>
                                     </tr>
                                     <% i++ %>
@@ -167,7 +191,8 @@
     <!-- Body main wrapper end -->
 
     <!-- JS -->
-
+    <script src="js/checkForm.js"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/5.0.7/sweetalert2.min.js'></script>
     <!-- jQuery JS  -->
     <script src="js/vendor/jquery-1.12.0.min.js"></script>
     <!-- Bootstrap JS  -->
@@ -181,6 +206,11 @@
     <script src="js/addNews.js"></script>
     <script src='js/swiper.js'> </script>
     <script src='js/swiper.min.js'></script>
+
+    <!-- partial -->
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src="js/scriptDel.js"></script>
+
 </body>
 
 </html>
