--- a/views/index.ejs
+++ b/views/index.ejs
@@ -53,186 +53,8 @@
     </div>
     <!-- Body main wrapper start -->
     <div class="wrapper bg-white fix">
-
         <!-- Header 1-->
-        <div class="header-area sticky header-area-1  clearfix">
-            <!-- Header Left 1 -->
-            <div class="header-left header-left-1 float-left">
-                <a href="index.html" class="logo">
-                    <img src="img/logo.png" alt="logo" />
-                </a>
-            </div>
-            <!-- Menu Wrapper 1 -->
-            <div class="menu-wrapper menu-wrapper-1 hidden-sm hidden-xs text-center">
-                <div class="menu menu-1">
-                    <nav>
-                        <ul>
-                            <li class="active">
-                                <a href="index.html">TRANG CHỦ</a>
-                            </li>
-                            <li>
-                                <a>LOẠI</a>
-                                <div class="mega-menu">
-                                    <ul>
-                                        <li>
-                                            <a href="product-page.html">CÁC LOẠI</a>
-                                        </li>
-                                        <li>
-                                            <a href="product-page.html">Xe cộ</a>
-                                        </li>
-                                        <li>
-                                            <a href="product-page.html">Đồ nội thất</a>
-                                        </li>
-                                        <li>
-                                            <a href="product-page.html">Đồ điện tử</a>
-                                        </li>
-                                        <li>
-                                            <a href="product-page.html">Thời trang</a>
-                                        </li>
-                                        <li>
-                                            <a href="product-page.html">Giày</a>
-                                        </li>
-                                        <li>
-                                            <a href="product-page.html">Đồ cổ</a>
-                                        </li>
-                                    </ul>
-                                    <ul>
-                                        <li>
-                                            <a href="#">TÌM THEO</a>
-                                        </li>
-                                        <li>
-                                            <a href="#">Tên</a>
-                                        </li>
-                                        <li>
-                                            <a href="#">Thời gian</a>
-                                        </li>
-                                    </ul>
-                                    <div class="menu-banner">
-                                        <a href="#">
-                                            <img src="img/menu-banner.jpg" alt="" />
-                                        </a>
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <a>Tình trạng</a>
-                                <ul class="sub-menu">
-                                    <li>
-                                        <a href="product-page.html">Đang đấu giá</a>
-                                    </li>
-                                    <li>
-                                        <a href="product-page.html">Đã lên sàng</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a>Chính sách</a>
-                                <ul class="sub-menu">
-                                    <li>
-                                        <a href="#">Chính sách đấu giá</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Chính sách giao hàng</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="contact.html">Liên hệ</a>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
-            </div>
-            <!-- Header Right 1 -->
-            <div class="header-right header-right-1 float-right">
-                <!-- Account Menu -->
-                <div class="account-menu account-menu-1 float-right">
-                    <button data-toggle="dropdown" class="acc-menu-toggle"><i class="zmdi zmdi-settings"></i></button>
-                    <ul class="acc-menu-dropdown dropdown-menu right">
-                        <li>
-                            <a href="#">Thông tin cá nhân</a>
-                        </li>
-                        <li>
-                            <a href="#">Lịch sử đấu giá</a>
-                        </li>
-                        <li>
-                            <a href="#">Xem chi tiết hoá đơn</a>
-                        </li>
-                        <li>
-                            <a href="/logout">Đăng xuất</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <!-- Mobile Menu Wrapper 1 -->
-            <div class="mobile-menu-wrapper mobile-menu-wrapper-1 hidden-md hidden-lg">
-                <div class="mobile-menu mobile-menu-1">
-                    <nav>
-                        <ul>
-                            <li class="active">
-                                <a href="index.html">TRANG CHỦ</a>
-                            </li>
-                            <li>
-                                <a>LOẠI</a>
-                                <ul>
-                                    <li>
-                                        <a href="product-page.html">CÁC LOẠI</a>
-                                        <ul>
-                                            <li>
-                                                <a href="product-page.html">CÁC LOẠI</a>
-                                            </li>
-                                            <li>
-                                                <a href="product-page.html">Xe cộ</a>
-                                            </li>
-                                            <li>
-                                                <a href="product-page.html">Đồ nội thất</a>
-                                            </li>
-                                            <li>
-                                                <a href="product-page.html">Đồ điện tử</a>
-                                            </li>
-                                            <li>
-                                                <a href="product-page.html">Thời trang</a>
-                                            </li>
-                                            <li>
-                                                <a href="product-page.html">Giày</a>
-                                            </li>
-                                            <li>
-                                                <a href="product-page.html">Đồ cổ</a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li>
-                                        <a>Tìm theo</a>
-                                        <ul>
-                                            <li>
-                                                <a href="product-page.html">Tên</a>
-                                            </li>
-                                            <li>
-                                                <a href="product-page.html">Thời gian</a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a>Chính sách</a>
-                                <ul>
-                                    <li>
-                                        <a href="#">Chính sách đấu giá</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Chính sách giao hàng</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="contact.html">Liện hệ</a>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
-            </div>
-        </div>
+        <% include element/headerC %>
         <!-- Home Slider -->
         <div class="slider-area-1 top-header-space-1  pb-10">
             <div id="mainSlider-1" class="nivoSlider slider-image">
@@ -257,7 +79,7 @@
                             <div class="sin-shipping-1 col-md-2 col-md-offset-0 col-sm-2 col-sm-offset-2 col-xs-2">
                                 <a href="#">
                                     <div class="icon float-left">
-                                        <i class="zmdi zmdi-smartphone-iphone"></i>
+                                        <a href="/sanpham?loai=xeco&sapxep=&tinhtrang=all"><i class="zmdi zmdi-car"></i></a>
                                     </div>
                                 </a>
                             </div>
@@ -265,7 +87,7 @@
                             <div class="sin-shipping-1 col-md-2 col-md-offset-0 col-sm-2 col-sm-offset-2 col-xs-2">
                                 <a href="#">
                                     <div class="icon float-left">
-                                        <i class="zmdi zmdi-laptop"></i>
+                                        <a href="/sanpham?loai=donoithat&sapxep=&tinhtrang=all"><i class="zmdi zmdi-seat"></i></a>
                                     </div>
                                 </a>
                             </div>
@@ -273,22 +95,14 @@
                             <div class="sin-shipping-1 col-md-2 col-md-offset-0 col-sm-2 col-sm-offset-2 col-xs-2">
                                 <a href="#">
                                     <div class="icon float-left">
-                                        <i class="zmdi zmdi-camera"></i>
+                                        <a href="/sanpham?loai=dodienthu&sapxep=&tinhtrang=all"><i class="zmdi zmdi-headset"></i></a>
                                     </div>
                                 </a>
                             </div>
                             <div class="sin-shipping-1 col-md-2 col-md-offset-0 col-sm-2 col-sm-offset-2 col-xs-2">
                                 <a href="#">
                                     <div class="icon float-left">
-                                        <i class="zmdi zmdi-truck"></i>
-                                    </div>
-                                </a>
-                            </div>
-                            <!-- Single Shipping -->
-                            <div class="sin-shipping-1 col-md-2 col-md-offset-0 col-sm-2 col-sm-offset-2 col-xs-2">
-                                <a href="#">
-                                    <div class="icon float-left">
-                                        <i class="zmdi zmdi-cloud"></i>
+                                        <a href="/sanpham?loai=thoitrang&sapxep=&tinhtrang=all"><i class="zmdi zmdi-accounts"></i></a>
                                     </div>
                                 </a>
                             </div>
@@ -296,7 +110,15 @@
                             <div class="sin-shipping-1 col-md-2 col-md-offset-0 col-sm-2 col-sm-offset-2 col-xs-2">
                                 <a href="#">
                                     <div class="icon float-left">
-                                        <i class="zmdi zmdi-car"></i>
+                                        <a href="/sanpham?loai=giay&sapxep=&tinhtrang=all"><i class="zmdi zmdi-shopping-basket"></i></a>
+                                    </div>
+                                </a>
+                            </div>
+                            <!-- Single Shipping -->
+                            <div class="sin-shipping-1 col-md-2 col-md-offset-0 col-sm-2 col-sm-offset-2 col-xs-2">
+                                <a href="#">
+                                    <div class="icon float-left">
+                                        <a href="/sanpham?loai=doco&sapxep=&tinhtrang=all"><i class="zmdi zmdi-group-work"></i></a>
                                     </div>
                                 </a>
                             </div>
