--- a/views/product-page.ejs
+++ b/views/product-page.ejs
@@ -55,86 +55,7 @@
             </a>
         </div>
         <!-- Menu Wrapper 1 -->
-        <div class="menu-wrapper menu-wrapper-1 hidden-sm hidden-xs text-center">
-            <div class="menu menu-1">
-                <nav>
-                    <ul>
-                        <li class="active">
-                            <a href="index.html">TRANG CHỦ</a>
-                        </li>
-                        <li>
-                            <a>LOẠI</a>
-                            <div class="mega-menu">
-                                <ul>
-                                    <li>
-                                        <a href="product-page.html">CÁC LOẠI</a>
-                                    </li>
-                                    <li>
-                                        <a href="product-page.html">Xe cộ</a>
-                                    </li>
-                                    <li>
-                                        <a href="product-page.html">Đồ nội thất</a>
-                                    </li>
-                                    <li>
-                                        <a href="product-page.html">Đồ điện tử</a>
-                                    </li>
-                                    <li>
-                                        <a href="product-page.html">Thời trang</a>
-                                    </li>
-                                    <li>
-                                        <a href="product-page.html">Giày</a>
-                                    </li>
-                                    <li>
-                                        <a href="product-page.html">Đồ cổ</a>
-                                    </li>
-                                </ul>
-                                <ul>
-                                    <li>
-                                        <a href="#">TÌM THEO</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Tên</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Thời gian</a>
-                                    </li>
-                                </ul>
-                                <div class="menu-banner">
-                                    <a href="#">
-                                        <img src="img/menu-banner.jpg" alt="" />
-                                    </a>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <a>Tình trạng</a>
-                            <ul class="sub-menu">
-                                <li>
-                                    <a href="product-page.html">Đang đấu giá</a>
-                                </li>
-                                <li>
-                                    <a href="product-page.html">Đã lên sàng</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a>Chính sách</a>
-                            <ul class="sub-menu">
-                                <li>
-                                    <a href="#">Chính sách đấu giá</a>
-                                </li>
-                                <li>
-                                    <a href="#">Chính sách giao hàng</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="contact.html">Liên hệ</a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
+        <% include element/headerC %>
         <!-- Header Right 1 -->
         <div class="header-right header-right-1 float-right">
             <!-- Account Menu -->
