Commit giữa đêm

--- a/views/element/header.ejs
+++ b/views/element/header.ejs
@@ -13,7 +13,7 @@
                 <div class="header-top-right header-top-right-4 col-xs-4 text-right">
                     <!-- Header Top Link -->
                     <div class="header-top-link float-right hidden-sm hidden-xs">
-                        <a href="#">Đăng xuất</a>
+                        <a href="/logout">Đăng xuất</a>
                     </div>
                 </div>
             </div>
@@ -28,19 +28,19 @@
                     <div class="menu menu-4">
                         <nav>
                             <ul>
-                                <li>
+                                <li class="menu_sanpham">
                                     <a href="/quanlysanpham">Quản lý sản phẩm</a>
                                 </li>
-                                <li>
+                                <li class="menu_hoadon">
                                     <a href="/quanlyhoadon">Quản lý hoá đơn</a>
                                 </li>
-                                <li>
+                                <li class="menu_khachhang">
                                     <a href="/quanlykhachhang">Quản lý khách hàng</a>
                                 </li>
-                                <li>
+                                <li class="menu_doanhnghiep">
                                     <a href="/quanlydoanhnghiep">Quản lý doanh nhgiệp</a>
                                 </li>
-                                <li>
+                                <li class="menu_loaisanpham">
                                     <a href="/quanlyloaisanpham">Quản lý loại sản phẩm</a>
                                 </li>
                             </ul>
@@ -52,19 +52,19 @@
                     <div class="mobile-menu mobile-menu-2">
                         <nav>
                             <ul>
-                                <li>
-                                    <a href="/quanlysanpham">Quản lý sản phẩm đấu giá</a>
+                                <li class="menu_sanpham">
+                                    <a href="/quanlysanpham">Quản lý sản phẩm</a>
                                 </li>
-                                <li>
+                                <li class="menu_hoadon">
                                     <a href="/quanlyhoadon">Quản lý hoá đơn</a>
                                 </li>
-                                <li>
+                                <li class="menu_khachhang">
                                     <a href="/quanlykhachhang">Quản lý khách hàng</a>
                                 </li>
-                                <li>
+                                <li class="menu_doanhnghiep">
                                     <a href="/quanlydoanhnghiep">Quản lý doanh nhgiệp</a>
                                 </li>
-                                <li>
+                                <li class="menu_loaisanpham">
                                     <a href="/quanlyloaisanpham">Quản lý loại sản phẩm</a>
                                 </li>
                             </ul>
