--- a/views/quanlyloaisanpham.ejs
+++ b/views/quanlyloaisanpham.ejs
@@ -15,22 +15,22 @@
 
 <!-- CSS -->
 <!-- Bootstrap CSS -->
-<link rel="stylesheet" href="./css/bootstrap.min.css">
+<link rel="stylesheet" href="css/bootstrap.min.css">
 <!-- Icon Font CSS-->
-<link rel="stylesheet" href="./css/material-design-iconic-font.min.css">
+<link rel="stylesheet" href=css/material-design-iconic-font.min.css">
 <!-- Plugins Import CSS -->
-<link rel="stylesheet" href="./css/import.css">
+<link rel="stylesheet" href="css/import.css">
 <!-- Style CSS -->
-<link rel="stylesheet" href="./style.css">
+<link rel="stylesheet" href="style.css">
 <!-- Responsive CSS -->
-<link rel="stylesheet" href="./css/responsive.css">
+<link rel="stylesheet" href="css/responsive.css">
 <link href="css/color/color-1.css" rel="stylesheet">
-<link rel="stylesheet" href="./css/addNews.css">
+<link rel="stylesheet" href="css/addNews.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
 
 <!-- Modernizer JS -->
-<script src="js/vendor/modernizr-2.8.3.min.js"></script>
+<script src="js/jquery.min.js"></script>
 </head>
 <body>
 <!-- Pre Loader -->
@@ -142,23 +142,23 @@
 
 <!-- JS -->
 
-<!-- jQuery JS
-============================================ -->
+<!-- jQuery JS -->
 <script src="js/vendor/jquery.min.js"></script>
-<!-- Bootstrap JS
-============================================ -->
+<!-- Bootstrap JS -->
 <script src="js/bootstrap.min.js"></script>
-<!-- Plugins JS
-============================================ -->
+<!-- Plugins JS -->
 <script src="js/plugins.js"></script>
-<!-- Particles Active JS
-============================================ -->
+<!-- Particles Active JS -->
 <script src="js/app.js"></script>
-<!-- Main JS
-============================================ -->
+<!-- Main JS -->
 <script src="js/main.js"></script>
 <script src="js/addNews.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $(".menu_loaisanpham").addClass("active");
+    });
+</script>
 </body>
 </html>
