--- a/views/quanlysanpham.ejs
+++ b/views/quanlysanpham.ejs
@@ -205,6 +205,11 @@
         $(function () {
             $('#datetimepicker1').datetimepicker();
         });</script>
+    <script>
+        $(document).ready(function () {
+            $(".menu_sanpham").addClass("active");
+        });
+    </script>
 </body>
 
 </html>
