--- a/views/element/headerC.ejs
+++ b/views/element/headerC.ejs
@@ -1,7 +1,7 @@
 <div class="header-area sticky header-area-1  clearfix">
     <!-- Header Left 1 -->
     <div class="header-left header-left-1 float-left">
-        <a href="index.html" class="logo">
+        <a href="/" class="logo">
             <img src="img/logo.png" alt="logo" />
         </a>
     </div>
