--- a/views/quanlyhoadon.ejs
+++ b/views/quanlyhoadon.ejs
@@ -1,147 +1,151 @@
 <!doctype html>
 <html class="no-js" lang="zxx">
+
 <head>
-<meta charset="utf-8">
-<meta http-equiv="x-ua-compatible" content="ie=edge">
-<title>Admin site</title>
-<meta name="description" content="">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Admin site</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!-- Favicon -->
-<link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
-<!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i"
+        rel="stylesheet">
 
-<!-- CSS -->
-<!-- Bootstrap CSS -->
-<link rel="stylesheet" href="css/bootstrap.min.css">
-<!-- Icon Font CSS-->
-<link rel="stylesheet" href="css/material-design-iconic-font.min.css">
-<!-- Plugins Import CSS -->
-<link rel="stylesheet" href="css/import.css">
-<!-- Style CSS -->
-<link rel="stylesheet" href="style.css">
-<!-- Responsive CSS -->
-<link rel="stylesheet" href="css/responsive.css">
-<link href="css/color/color-1.css" rel="stylesheet">
+    <!-- CSS -->
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <!-- Icon Font CSS-->
+    <link rel="stylesheet" href="css/material-design-iconic-font.min.css">
+    <!-- Plugins Import CSS -->
+    <link rel="stylesheet" href="css/import.css">
+    <!-- Style CSS -->
+    <link rel="stylesheet" href="style.css">
+    <!-- Responsive CSS -->
+    <link rel="stylesheet" href="css/responsive.css">
+    <link href="css/color/color-1.css" rel="stylesheet">
 
-<!-- Modernizer JS -->
-<script src="js/vendor/modernizr-2.8.3.min.js"></script>
+    <!-- Modernizer JS -->
+    <script src="js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
+
 <body>
-<!-- Pre Loader -->
-<div class="preloader">
-    <div class="loading-center">
-        <div class="loading-center-absolute">
-            <div class="object object_one">
-            </div>
-            <div class="object object_two">
-            </div>
-            <div class="object object_three">
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Body main wrapper start -->
-<div class="wrapper bg-white fix">
-    
-    <!-- Header 4 -->
-    <% include element/header %>
-    <!-- Cart Area -->
-    <div class="cart-area pb-90 pt-90 mt-100">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12">
-                    <div class="cart-table table-responsive mb-50">
-                        <table class="table">
-                            <thead class="thead-dark">
-                                <tr>
-                                    <th scope="col" style="text-align: left;"> #</th>
-                                    <th scope="col" style="text-align: left;">Mã HĐ</th>
-                                    <th scope="col" style="text-align: left;">Sản phẩm</th>
-                                    <th scope="col" style="text-align: left;">Khách hàng</th>
-                                    <th scope="col" style="text-align: left;">Ngày giao dịch</th>
-                                    <th scope="col" style="text-align: left;">Giá trị</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <th scope="row">1</th>
-                                    <td>HD12</td>
-                                    <td><a href="#" class="tag-a">Đồ cổ đến từ Mông Cổ</a></td>
-                                    <td><a href="#" class="tag-a">Nguyễn Văn A</a></td>
-                                    <td>14:23:87 27/05/2019</td>
-                                    <td>2.000 VNĐ</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">2</th>
-                                    <td>HD12</td>
-                                    <td><a href="#" class="tag-a">Đồ cổ đến từ Mông Cổ</a></td>
-                                    <td><a href="#" class="tag-a">Nguyễn Văn A</a></td>
-                                    <td>14:23:87 27/05/2019</td>
-                                    <td>2.000 VNĐ</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">3</th>
-                                    <td>HD12</td>
-                                    <td><a href="#" class="tag-a">Đồ cổ đến từ Mông Cổ</a></td>
-                                    <td><a href="#" class="tag-a">Nguyễn Văn A</a></td>
-                                    <td>14:23:87 27/05/2019</td>
-                                    <td>2.000 VNĐ</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">4</th>
-                                    <td>HD12</td>
-                                    <td><a href="#" class="tag-a">Đồ cổ đến từ Mông Cổ</a></td>
-                                    <td><a href="#" class="tag-a">Nguyễn Văn A</a></td>
-                                    <td>14:23:87 27/05/2019</td>
-                                    <td>2.000 VNĐ</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">1</th>
-                                    <td>HD12</td>
-                                    <td><a href="#" class="tag-a">Đồ cổ đến từ Mông Cổ</a></td>
-                                    <td><a href="#" class="tag-a">Nguyễn Văn A</a></td>
-                                    <td>14:23:87 27/05/2019</td>
-                                    <td>2.000 VNĐ</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">6</th>
-                                    <td>HD12</td>
-                                    <td><a href="#" class="tag-a">Đồ cổ đến từ Mông Cổ</a></td>
-                                    <td><a href="#" class="tag-a">Nguyễn Văn A</a></td>
-                                    <td>14:23:87 27/05/2019</td>
-                                    <td>2.000 VNĐ</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
+    <!-- Pre Loader -->
+    <div class="preloader">
+        <div class="loading-center">
+            <div class="loading-center-absolute">
+                <div class="object object_one">
+                </div>
+                <div class="object object_two">
+                </div>
+                <div class="object object_three">
                 </div>
             </div>
         </div>
     </div>
-    <!--Footer-->
-    <% include element/footer %>
-</div>
-<!-- Body main wrapper end -->
+    <!-- Body main wrapper start -->
+    <div class="wrapper bg-white fix">
 
-<!-- JS -->
+        <!-- Header 4 -->
+        <% include element/header %>
+        <!-- Cart Area -->
+        <div class="cart-area pb-90 pt-90 mt-100">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <div class="cart-table table-responsive mb-50">
+                            <table class="table">
+                                <thead class="thead-dark">
+                                    <tr>
+                                        <th scope="col" style="text-align: left;"> #</th>
+                                        <th scope="col" style="text-align: left;">Mã HĐ</th>
+                                        <th scope="col" style="text-align: left;">Sản phẩm</th>
+                                        <th scope="col" style="text-align: left;">Khách hàng</th>
+                                        <th scope="col" style="text-align: left;">Ngày giao dịch</th>
+                                        <th scope="col" style="text-align: left;">Giá trị</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <th scope="row">1</th>
+                                        <td>HD12</td>
+                                        <td><a href="#" class="tag-a">Đồ cổ đến từ Mông Cổ</a></td>
+                                        <td><a href="#" class="tag-a">Nguyễn Văn A</a></td>
+                                        <td>14:23:87 27/05/2019</td>
+                                        <td>2.000 VNĐ</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">2</th>
+                                        <td>HD12</td>
+                                        <td><a href="#" class="tag-a">Đồ cổ đến từ Mông Cổ</a></td>
+                                        <td><a href="#" class="tag-a">Nguyễn Văn A</a></td>
+                                        <td>14:23:87 27/05/2019</td>
+                                        <td>2.000 VNĐ</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">3</th>
+                                        <td>HD12</td>
+                                        <td><a href="#" class="tag-a">Đồ cổ đến từ Mông Cổ</a></td>
+                                        <td><a href="#" class="tag-a">Nguyễn Văn A</a></td>
+                                        <td>14:23:87 27/05/2019</td>
+                                        <td>2.000 VNĐ</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">4</th>
+                                        <td>HD12</td>
+                                        <td><a href="#" class="tag-a">Đồ cổ đến từ Mông Cổ</a></td>
+                                        <td><a href="#" class="tag-a">Nguyễn Văn A</a></td>
+                                        <td>14:23:87 27/05/2019</td>
+                                        <td>2.000 VNĐ</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">1</th>
+                                        <td>HD12</td>
+                                        <td><a href="#" class="tag-a">Đồ cổ đến từ Mông Cổ</a></td>
+                                        <td><a href="#" class="tag-a">Nguyễn Văn A</a></td>
+                                        <td>14:23:87 27/05/2019</td>
+                                        <td>2.000 VNĐ</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">6</th>
+                                        <td>HD12</td>
+                                        <td><a href="#" class="tag-a">Đồ cổ đến từ Mông Cổ</a></td>
+                                        <td><a href="#" class="tag-a">Nguyễn Văn A</a></td>
+                                        <td>14:23:87 27/05/2019</td>
+                                        <td>2.000 VNĐ</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--Footer-->
+        <% include element/footer %>
+    </div>
+    <!-- Body main wrapper end -->
 
-<!-- jQuery JS
-============================================ -->
-<script src="js/vendor/jquery-1.12.0.min.js"></script>
-<!-- Bootstrap JS
-============================================ -->
-<script src="js/bootstrap.min.js"></script>
-<!-- Plugins JS
-============================================ -->
-<script src="js/plugins.js"></script>
-<!-- Particles Active JS
-============================================ -->
-<script src="js/app.js"></script>
-<!-- Main JS
-============================================ -->
-<script src="js/main.js"></script>
+    <!-- JS -->
+
+    <!-- jQuery JS -->
+    <script src="js/vendor/jquery-1.12.0.min.js"></script>
+    <!-- Bootstrap JS -->
+    <script src="js/bootstrap.min.js"></script>
+    <!-- Plugins JS -->
+    <script src="js/plugins.js"></script>
+    <!-- Particles Active JS -->
+    <script src="js/app.js"></script>
+    <!-- Main JS -->
+    <script src="js/main.js"></script>
+    <script>
+        $(document).ready(function () {
+            $(".menu_hoadon").addClass("active");
+        });
+    </script>
 </body>
+
 </html>
