--- a/views/quanlykhachhang.ejs
+++ b/views/quanlykhachhang.ejs
@@ -1,195 +1,199 @@
 <!doctype html>
 <html class="no-js" lang="zxx">
+
 <head>
-<meta charset="utf-8">
-<meta http-equiv="x-ua-compatible" content="ie=edge">
-<title>Admin site</title>
-<meta name="description" content="">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Admin site</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!-- Favicon -->
-<link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
-<!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i"
+        rel="stylesheet">
 
-<!-- CSS -->
-<!-- Bootstrap CSS -->
-<link rel="stylesheet" href="css/bootstrap.min.css">
-<!-- Icon Font CSS-->
-<link rel="stylesheet" href="css/material-design-iconic-font.min.css">
-<!-- Plugins Import CSS -->
-<link rel="stylesheet" href="css/import.css">
-<!-- Style CSS -->
-<link rel="stylesheet" href="style.css">
-<!-- Responsive CSS -->
-<link rel="stylesheet" href="css/responsive.css">
-<link href="css/color/color-1.css" rel="stylesheet">
-<link rel="stylesheet" href="css/addNews.css">
-<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.css'>
-<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css'>
-<!-- Modernizer JS -->
-<script src="js/vendor/modernizr-2.8.3.min.js"></script>
+    <!-- CSS -->
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <!-- Icon Font CSS-->
+    <link rel="stylesheet" href="css/material-design-iconic-font.min.css">
+    <!-- Plugins Import CSS -->
+    <link rel="stylesheet" href="css/import.css">
+    <!-- Style CSS -->
+    <link rel="stylesheet" href="style.css">
+    <!-- Responsive CSS -->
+    <link rel="stylesheet" href="css/responsive.css">
+    <link href="css/color/color-1.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/addNews.css">
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.css'>
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css'>
+    <!-- Modernizer JS -->
+    <script src="js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
+
 <body>
-<!-- Pre Loader -->
-<div class="preloader">
-    <div class="loading-center">
-        <div class="loading-center-absolute">
-            <div class="object object_one">
-            </div>
-            <div class="object object_two">
-            </div>
-            <div class="object object_three">
+    <!-- Pre Loader -->
+    <div class="preloader">
+        <div class="loading-center">
+            <div class="loading-center-absolute">
+                <div class="object object_one">
+                </div>
+                <div class="object object_two">
+                </div>
+                <div class="object object_three">
+                </div>
             </div>
         </div>
     </div>
-</div>
-<!-- Body main wrapper start -->
-<div class="wrapper bg-white fix">
-    
-    <!-- Header 4 -->
-    <% include element/header %>
-    <!-- Cart Area -->
-    <div class="cart-area pb-90 pt-90 mt-100">
-        <div class="container">
-            <div class="row">
-                <div class="procced-checkout col-md-12 col-xs-12">
-                <button class="btn btn-open checkout-link">
-                <span>Thêm khách hàng</span>
-                </div>
-                <section class="modal">
-                    <div class="wrapper">
-                        <div class="container">
-                            <span class="icon-close"></span>
-                            <div class="right">
-                                <div class="form">
-                                    <h2 class="title">Thêm khách hàng</h2>
-                                    <form>
-                                    <div class="input-wrapper">
-                                        <label for="">Họ tên khách hàng</label>
-                                        <input id="name" type="text" placeholder="Name">
+    <!-- Body main wrapper start -->
+    <div class="wrapper bg-white fix">
+
+        <!-- Header 4 -->
+        <% include element/header %>
+        <!-- Cart Area -->
+        <div class="cart-area pb-90 pt-90 mt-100">
+            <div class="container">
+                <div class="row">
+                    <div class="procced-checkout col-md-12 col-xs-12">
+                        <button class="btn btn-open checkout-link">
+                            <span>Thêm khách hàng</span>
+                    </div>
+                    <section class="modal">
+                        <div class="wrapper">
+                            <div class="container">
+                                <span class="icon-close"></span>
+                                <div class="right">
+                                    <div class="form">
+                                        <h2 class="title">Thêm khách hàng</h2>
+                                        <form>
+                                            <div class="input-wrapper">
+                                                <label for="">Họ tên khách hàng</label>
+                                                <input id="name" type="text" placeholder="Name">
+                                            </div>
+                                            <div class="input-wrapper">
+                                                <label for="">Tên người dùng:</label>
+                                                <input id="user" type="text" placeholder="User">
+                                            </div>
+                                            <div class="input-wrapper">
+                                                <label for="">Mật khẩu:</label>
+                                                <input id="pass" type="text" placeholder="Password">
+                                            </div>
+                                            <div class="input-wrapper">
+                                                <label for="">Nhập lại mật khẩu:</label>
+                                                <input id="re-pass" type="text" placeholder="Re-Password">
+                                            </div>
+                                            <div class="input-wrapper">
+                                                <label for="">Địa chỉ:</label>
+                                                <input id="address" type="text" placeholder="Address">
+                                            </div>
+                                            <div class="input-wrapper">
+                                                <label for="">Số điện thoại:</label>
+                                                <input id="tel" type="text" placeholder="Telephone Number">
+                                            </div>
+                                            <div class="input-wrapper">
+                                                <label for="">Email:</label>
+                                                <input id="mail" type="email" placeholder="Name">
+                                            </div>
+                                        </form>
+                                        <button class="btn"><span>Xác nhận</span></button>
                                     </div>
-                                    <div class="input-wrapper">
-                                        <label for="">Tên người dùng:</label>
-                                        <input id="user" type="text" placeholder="User">
-                                    </div>
-                                    <div class="input-wrapper">
-                                        <label for="">Mật khẩu:</label>
-                                        <input id="pass" type="text" placeholder="Password">
-                                    </div>
-                                    <div class="input-wrapper">
-                                        <label for="">Nhập lại mật khẩu:</label>
-                                        <input id="re-pass" type="text" placeholder="Re-Password">
-                                    </div>
-                                    <div class="input-wrapper">
-                                        <label for="">Địa chỉ:</label>
-                                        <input id="address" type="text" placeholder="Address">
-                                    </div>
-                                    <div class="input-wrapper">
-                                        <label for="">Số điện thoại:</label>
-                                        <input id="tel" type="text" placeholder="Telephone Number">
-                                    </div>
-                                    <div class="input-wrapper">
-                                        <label for="">Email:</label>
-                                        <input id="mail" type="email" placeholder="Name">
-                                    </div>
-                                    </form>
-                                    <button class="btn"><span>Xác nhận</span></button>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </section>
-            </div>
-            <div class="row" style="margin-top: 20px;">
-                <div class="col-xs-12">
-                    <div class="cart-table table-responsive mb-50">
-                        <table class="table">
-                            <thead class="thead-dark">
-                                <tr>
-                                    <th scope="col" style="text-align: left;"> #</th>
-                                    <th scope="col" style="text-align: left;">Mã KH</th>
-                                    <th scope="col" style="text-align: left;">Họ tên</th>
-                                    <th scope="col" style="text-align: left;">Địa chỉ</th>
-                                    <th scope="col" style="text-align: left;">Số điện thoại</th>
-                                    <th scope="col" style="text-align: left;">Mail</th>
-                                    <th scope="col" style="text-align: left;">Username</th>
-                                    <th scope="col" style="text-align: left;">Edit</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <th scope="row">1</th>
-                                    <td>KD12</td>
-                                    <td>Nguyễn Văn A</td>
-                                    <td>12 Nguyễn Văn Bảo, phường 4, Gò Vấp</td>
-                                    <td>123456789</td>
-                                    <td>google@gmail.com</td>
-                                    <td>google</td>
-                                    <td><button class="cart-pro-remove"><i class="zmdi zmdi-edit"></i></button></td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">2</th>
-                                    <td>KD12</td>
-                                    <td>Nguyễn Văn A</td>
-                                    <td>12 Nguyễn Văn Bảo, phường 4, Gò Vấp</td>
-                                    <td>123456789</td>
-                                    <td>google@gmail.com</td>
-                                    <td>google</td>
-                                    <td><button class="cart-pro-remove"><i class="zmdi zmdi-edit"></i></button></td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">3</th>
-                                    <td>KD12</td>
-                                    <td>Nguyễn Văn A</td>
-                                    <td>12 Nguyễn Văn Bảo, phường 4, Gò Vấp</td>
-                                    <td>123456789</td>
-                                    <td>google@gmail.com</td>
-                                    <td>google</td>
-                                    <td><button class="cart-pro-remove"><i class="zmdi zmdi-edit"></i></button></td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">4</th>
-                                    <td>KD12</td>
-                                    <td>Nguyễn Văn A</td>
-                                    <td>12 Nguyễn Văn Bảo, phường 4, Gò Vấp</td>
-                                    <td>123456789</td>
-                                    <td>google@gmail.com</td>
-                                    <td>google</td>
-                                    <td><button class="cart-pro-remove"><i class="zmdi zmdi-edit"></i></button></td>
-                                </tr>
-                            </tbody>
-                        </table>
+                    </section>
+                </div>
+                <div class="row" style="margin-top: 20px;">
+                    <div class="col-xs-12">
+                        <div class="cart-table table-responsive mb-50">
+                            <table class="table">
+                                <thead class="thead-dark">
+                                    <tr>
+                                        <th scope="col" style="text-align: left;"> #</th>
+                                        <th scope="col" style="text-align: left;">Mã KH</th>
+                                        <th scope="col" style="text-align: left;">Họ tên</th>
+                                        <th scope="col" style="text-align: left;">Địa chỉ</th>
+                                        <th scope="col" style="text-align: left;">Số điện thoại</th>
+                                        <th scope="col" style="text-align: left;">Mail</th>
+                                        <th scope="col" style="text-align: left;">Username</th>
+                                        <th scope="col" style="text-align: left;">Edit</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <th scope="row">1</th>
+                                        <td>KD12</td>
+                                        <td>Nguyễn Văn A</td>
+                                        <td>12 Nguyễn Văn Bảo, phường 4, Gò Vấp</td>
+                                        <td>123456789</td>
+                                        <td>google@gmail.com</td>
+                                        <td>google</td>
+                                        <td><button class="cart-pro-remove"><i class="zmdi zmdi-edit"></i></button></td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">2</th>
+                                        <td>KD12</td>
+                                        <td>Nguyễn Văn A</td>
+                                        <td>12 Nguyễn Văn Bảo, phường 4, Gò Vấp</td>
+                                        <td>123456789</td>
+                                        <td>google@gmail.com</td>
+                                        <td>google</td>
+                                        <td><button class="cart-pro-remove"><i class="zmdi zmdi-edit"></i></button></td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">3</th>
+                                        <td>KD12</td>
+                                        <td>Nguyễn Văn A</td>
+                                        <td>12 Nguyễn Văn Bảo, phường 4, Gò Vấp</td>
+                                        <td>123456789</td>
+                                        <td>google@gmail.com</td>
+                                        <td>google</td>
+                                        <td><button class="cart-pro-remove"><i class="zmdi zmdi-edit"></i></button></td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">4</th>
+                                        <td>KD12</td>
+                                        <td>Nguyễn Văn A</td>
+                                        <td>12 Nguyễn Văn Bảo, phường 4, Gò Vấp</td>
+                                        <td>123456789</td>
+                                        <td>google@gmail.com</td>
+                                        <td>google</td>
+                                        <td><button class="cart-pro-remove"><i class="zmdi zmdi-edit"></i></button></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+        <!--Footer-->
+        <% include element/footer %>
     </div>
-    <!--Footer-->
-    <% include element/footer %>
-</div>
-<!-- Body main wrapper end -->
+    <!-- Body main wrapper end -->
 
-<!-- JS -->
+    <!-- JS -->
 
-<!-- jQuery JS
-============================================ -->
-<script src="js/vendor/jquery-1.12.0.min.js"></script>
-<!-- Bootstrap JS
-============================================ -->
-<script src="js/bootstrap.min.js"></script>
-<!-- Plugins JS
-============================================ -->
-<script src="js/plugins.js"></script>
-<!-- Particles Active JS
-============================================ -->
-<script src="js/app.js"></script>
-<!-- Main JS
-============================================ -->
-<script src="js/main.js"></script>
-<script src="js/addNews.js"></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js'></script>
+    <!-- jQuery JS-->
+    <script src="js/vendor/jquery-1.12.0.min.js"></script>
+    <!-- Bootstrap JS -->
+    <script src="js/bootstrap.min.js"></script>
+    <!-- Plugins JS -->
+    <script src="js/plugins.js"></script>
+    <!-- Particles Active JS -->
+    <script src="js/app.js"></script>
+    <!-- Main JS -->
+    <script src="js/main.js"></script>
+    <script src="js/addNews.js"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js'></script>
+    <script>
+        $(document).ready(function () {
+            $(".menu_khachhang").addClass("active");
+        });
+    </script>
 </body>
+
 </html>
